--- a/Chrome_Ext/popup.html
+++ b/Chrome_Ext/popup.html
@@ -14,7 +14,7 @@
     </div>
 
     <form class="main_form">
-      <input class="form_control" placeholder="URL"/>
+      <input class="form_control" id="url" placeholder="URL"/>
 
       <div class="template_path">
         <div class="label">
@@ -32,8 +32,8 @@
       <button class="btn_primary">Launch Admnin</button>
     </form>
 
-    <p class="msg success_msg">
-      <strong>Success!</strong> Cache Cleared!
+    <p class="msg error_msg" id="msg">
+      <strong></strong> <span></span>
     </p>
 
     <div class="template_path">
