--- a/Chrome_Ext/popup.html
+++ b/Chrome_Ext/popup.html
@@ -61,7 +61,7 @@
 
       <div class="template_path">
         <div class="label">
-          Template pathing
+          Template path hints
         </div>
         <div class="content">
           <input type="checkbox" class="toggle" name="tempath" id="tempath_toggle">
