template path hints code change

--- a/Chrome_Ext/popup.html
+++ b/Chrome_Ext/popup.html
@@ -71,7 +71,7 @@
       <button class="btn_primary" id="clearCache">Clear Cache</button>
       <button class="btn_primary" id="cacheFlush">Cache Flush</button>
       <button class="btn_primary" id="reIndex">Re-Index</button>
-      <button class="btn_primary" id="adminPage">Launch Admnin</button>
+      <button class="btn_primary" id="browserCache">Clear Browser Cache</button>
 
       <div class="template_path">
         <div class="label">
