--- a/Chrome_Ext/popup.html
+++ b/Chrome_Ext/popup.html
@@ -92,7 +92,7 @@
       <br/>
       <input class="form_control" id="url" placeholder="URL"/>
       <div class="conn_status">
-        <strong>Status: </strong><span id="current_status">Disconnected</span>
+        <strong>Status: </strong><span id="current_status">Unknown</span>
       </div>
       <div class="link">
         <svg class="github" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -149,7 +149,7 @@
             </g>
           </g>
         </svg>
-        <a href="#">Feedback</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLScy4YFGFdNUtaYKDWZIsGWZte_SFZVxXdpDeKhqf8RP_sE2fw/viewform" target="_blank">Feedback</a>
       </div>
 
       <br/>
