--- a/Chrome_Ext/popup.html
+++ b/Chrome_Ext/popup.html
@@ -121,7 +121,7 @@
               C438.536,184.851,428.728,148.168,409.132,114.573z"/>
           </g>
         </svg>
-        <a href="#">Read me</a>
+        <a href="https://github.com/IncognitoGeeks/Magento-2-Dev-Extension/" target="_blank">Read me</a>
       </div>
 
       <div class="link">
