--- a/Chrome_Ext/popup.html
+++ b/Chrome_Ext/popup.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>M2 DevExt</title>
   <link href="popup.css" rel="stylesheet">
+  <link href="onboard.css" rel="stylesheet">
   <script src="jquery-3.5.1.min.js"></script>
   <script src="popup.js"></script>
+  <script src="onboard.js"></script>
 </head>
 <body>
   <div class="main_content">
@@ -176,5 +178,26 @@
       </div>
     </div>
   </div>
+
+
+  <ul class="onboard-wrapper">
+		<li class="single-step">
+			<span>Step 1</span>
+
+			<div class="more-info right">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+			</div>
+		</li>
+
+		<li class="single-step">
+			<span>Step 2</span>
+
+			<div class="more-info bottom">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+			</div>
+		</li>
+  </ul>
+  
+  <div class="overlay"></div>
 </body>
 </html>
