Setps Details added

--- a/Chrome_Ext/popup.html
+++ b/Chrome_Ext/popup.html
@@ -123,7 +123,7 @@
               C438.536,184.851,428.728,148.168,409.132,114.573z"/>
           </g>
         </svg>
-        <a href="https://github.com/IncognitoGeeks/Magento-2-Dev-Extension/" target="_blank">Read me</a>
+        <a href="https://github.com/IncognitoGeeks/m2-dev-chrome-ext" target="_blank">Read me</a>
       </div>
 
       <div class="link">
@@ -185,7 +185,7 @@
 			<span>Step 1</span>
 
 			<div class="more-info right">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+				<p>Click here to manage the Extension.</p>
 			</div>
 		</li>
 
@@ -193,7 +193,7 @@
 			<span>Step 2</span>
 
 			<div class="more-info bottom">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+				<p>Enter your BaseURL of M2 instance here.</p>
 			</div>
 		</li>
   </ul>
