--- a/Chrome_Ext/popup.html
+++ b/Chrome_Ext/popup.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>M2 DevExt</title>
+  <link href="reset.css" rel="stylesheet">
   <link href="popup.css" rel="stylesheet">
   <link href="onboard.css" rel="stylesheet">
   <script src="jquery-3.5.1.min.js"></script>
